// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component renders danger button correctly 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center font-medium rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed transition ease-in-out duration-150 px-4 py-2 text-sm bg-red-600 text-white hover:bg-red-700 focus:ring-red-500 border border-transparent"
  >
    Danger
  </button>
</DocumentFragment>
`;

exports[`Button Component renders disabled button correctly 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center font-medium rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed transition ease-in-out duration-150 px-4 py-2 text-sm bg-primary text-white hover:bg-accent focus:ring-primary border border-transparent"
    disabled=""
  >
    Disabled
  </button>
</DocumentFragment>
`;

exports[`Button Component renders fullWidth button correctly 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center font-medium rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed transition ease-in-out duration-150 px-4 py-2 text-sm bg-primary text-white hover:bg-accent focus:ring-primary border border-transparent w-full"
  >
    Full Width
  </button>
</DocumentFragment>
`;

exports[`Button Component renders large button correctly 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center font-medium rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed transition ease-in-out duration-150 px-6 py-3 text-base bg-primary text-white hover:bg-accent focus:ring-primary border border-transparent"
  >
    Large
  </button>
</DocumentFragment>
`;

exports[`Button Component renders link button correctly 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center font-medium rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed transition ease-in-out duration-150 px-4 py-2 text-sm text-primary hover:text-accent underline focus:ring-primary shadow-none border-none bg-transparent p-0"
  >
    Link
  </button>
</DocumentFragment>
`;

exports[`Button Component renders primary button correctly 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center font-medium rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed transition ease-in-out duration-150 px-4 py-2 text-sm bg-primary text-white hover:bg-accent focus:ring-primary border border-transparent"
  >
    Primary
  </button>
</DocumentFragment>
`;

exports[`Button Component renders secondary button correctly 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center font-medium rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed transition ease-in-out duration-150 px-4 py-2 text-sm bg-white text-gray-700 border border-gray-300 hover:bg-gray-100 focus:ring-secondary"
  >
    Secondary
  </button>
</DocumentFragment>
`;

exports[`Button Component renders small button correctly 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center font-medium rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed transition ease-in-out duration-150 px-3 py-1.5 text-xs bg-primary text-white hover:bg-accent focus:ring-primary border border-transparent"
  >
    Small
  </button>
</DocumentFragment>
`;

exports[`Button Component renders with additional className 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center font-medium rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed transition ease-in-out duration-150 px-4 py-2 text-sm bg-primary text-white hover:bg-accent focus:ring-primary border border-transparent  my-custom-class"
  >
    Custom Class
  </button>
</DocumentFragment>
`;

exports[`Button Component renders with onClick handler (structure check) 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center font-medium rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed transition ease-in-out duration-150 px-4 py-2 text-sm bg-primary text-white hover:bg-accent focus:ring-primary border border-transparent"
  >
    Click Me
  </button>
</DocumentFragment>
`;
